--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "platform-version": "2.0",
+  "platform-version": "2.2",
   "product": {
     "freshdesk": {
       "location": {
@@ -16,5 +16,9 @@
   },
   "whitelisted-domains": [
     "https://assist.zoho.com"
-  ]
+  ],
+  "engines": {
+    "node": "14.7.0",
+    "fdk": "8.6.7"
+  }
 }
